--- a/equaliteach/index.html
+++ b/equaliteach/index.html
@@ -139,7 +139,7 @@
       </div>
 
       <div class="bentuk4">
-        <p br>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
           Excepturi fugit eum optio sint ratione perspiciatis, exercitationem<br>
           ullam enim fuga! Cum dolorum cumque, a dolores ab doloremque quia!<br>
           Deserunt, harum cumque.</p>
